# landing-page

./: .env.example  .gitignore  .gitmessage.txt  .pre-commit-config.yaml  README.md  db.PostgreSQL  deployment_guide.txt  main.py  manage.py  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
accounts/: apps.py  models.py  serializers.py  urls.py  views.py
app/: models.py
app/accounts/: admin.py  apps.py  constants.py  models.py  serializers.py  urls.py  views.py
app/accounts/migrations/: 0001_initial.py  0002_alter_account_account_type_alter_account_bank_code_and_more.py
app/analysis/: admin.py  analyzers.py  apps.py  models.py  serializers.py  urls.py  views.py
app/analysis/migrations/: 0001_initial.py  0002_initial.py
app/analysis/tests/: test_analyzer.py
app/notification/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
app/notification/migrations/: 0001_initial.py  0002_initial.py
app/users/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
app/users/migrations/: 0001_initial.py
config/: settings.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
scripts/: .env.example  deploy.sh  nginx.landing.conf  run.sh
users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
