[project]
name = "landing-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.5",
    "django-restframework>=0.0.1",
    "drf-spectacular>=0.28.0",
    "drf-yasg>=1.21.10",
    "pre-commit>=4.3.0",
    "psycopg2-binary>=2.9.10",
    "pillow>=11.3.0",
    "python-dotenv>=1.0.0",
    "djangorestframework>=3.16.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]
prod = [
    "django>=5.2.5",
]
