[project]
name = "landing-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==5.2.5",
    "django-restframework>=0.0.1",
    "drf-spectacular==0.28.0",
    "drf-yasg==1.21.10",
    "pre-commit>=4.3.0",
    "psycopg2-binary==2.9.10",
    "pillow==11.3.0",
    "python-dotenv==1.0.1",
    "djangorestframework==3.16.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "gunicorn>=23.0.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "uritemplate==4.2.0",
    "inflection==0.5.1",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.4.1",
    "referencing==0.36.2",
    "rpds-py==0.27.0",
    "attrs==25.3.0",
    "packaging==25.0",
    "asgiref==3.9.1",
    "sqlparse==0.5.3",
    "tzdata==2025.2 ; sys_platform == 'win32'",
    "django-cors-headers==4.6.0",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]
prod = [
    "django>=5.2.5",
]
