[project]
name = "landing-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==5.2.5",
    "djangorestframework==3.16.1",
    "drf-spectacular==0.28.0",
    "pre-commit>=4.3.0",
    "psycopg2-binary==2.9.10",
    "pillow==11.3.0",
    "python-dotenv==1.0.1",
    "gunicorn>=23.0.0",
    "django-cors-headers==4.6.0",
    "whitenoise>=6.9.0",
    "djangorestframework-simplejwt==5.3.0",
    "setuptools>=75.0.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]
prod = [
    "django>=5.2.5",
]
